@092: merged all but matchinterface, teamstats and playerfilter changes into branch
git-svn-id: https://foxtrick.googlecode.com/svn/branches/0.9.2@9235 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/da/foxtrick.properties
+++ b/content/locale/da/foxtrick.properties
@@ -259,13 +259,103 @@ module.NewMail.NotifyForumSound.desc=Afspil lyd på nye forum svar
 module.CopyYouth.desc=Kopiere funktioner for ungdom rapporter og kilder
 module.CopyYouth.TrainingReport.desc=Trænings rapport
 module.CopyYouth.ScoutComment.desc=Spejder kommentar
+module.CopyYouth.RejectedToHTY.desc=Kopiere spejder kommentar og åben HT-Youthclub når du afviser en spiller
+module.CopyYouth.FixturesSource.desc=Kampprogram kildekode
+module.PlayerBirthday.desc=Viser sidste og kommende fødselsdage i spillere oversigt
+module.MovePlayerSelectbox.desc=Flytter rullepanel med spillere oversigt, længere op på spiller detaljeside
+module.SeasonStats.desc=Viser statistik på kamp arkiv sider
+module.LeagueNewsFilter.desc=Filtre til at vise en bestemt type liga nyheder.
+module.LeagueNewsFilter.all.desc=Vis alle nyheder
+module.LeagueNewsFilter.friendlies.desc=Vis kun internationale venskabskampe og skiftet træner
+module.LeagueNewsFilter.transfers.desc=Vis kun transfer handeler
 #MoveManagerOnline
+module.MoveManagerOnline.desc=Flytter online managere længere op på region siden. OBS\! Det bliver meget langsom hvis listen over online spillere er over 100.
 module.TeamPopupLinks.desc=Viser et lille pop op-vindue med links, når du placerer musemarkøren over et HoldID link
-module.MatchIncome.desc=Vis tilskuerindtægterne I kampreferatet
+module.TeamPopupLinks.TeamLinks.desc=Tilføj popups til hold links
+module.TeamPopupLinks.UserLinks.desc=Tilføj popups til manager links
+module.TeamPopupLinks.Manager.desc=Manager (kun for hold links)
+module.TeamPopupLinks.Team.desc=Hold (kun for manager links)
+module.TeamPopupLinks.Matches.desc=Kampe
+module.TeamPopupLinks.Players.desc=Spillere
+module.TeamPopupLinks.last_5_ips.desc=5 seneste-logins
+module.TeamPopupLinks.Guestbook.desc=Gæstebog
+module.TeamPopupLinks.SendMessage.desc=Send meddelelse
+module.TeamPopupLinks.Challenge.desc=Udfordre
+module.TeamPopupLinks.Achievements.desc=Bedrift
+module.TeamPopupLinks.TransferHistory.desc=Transfer historik
+module.TeamPopupLinks.TeamHistory.desc=Klubhistorik
+module.TeamPopupLinks.LastLineup.desc=Sidste holdopstilling
+module.TeamPopupLinks.NextMatch.desc=Næste Kamp
+module.TeamPopupLinks.AddNextMatch.desc=Tilføjer næste kamp til HT Live
+module.TeamPopupLinks.YouthMatches.desc=Ungdomskampe
+module.TeamPopupLinks.Coach.desc=Træner
+module.TeamPopupLinks.CustomLink.desc=Brugerdefinerede links i adskilte linjer. Links [BrugerID] og [HoldID] vil blive erstattet af de faktiske id'er. Eksempel\: {"link"\:"http\://example.com/[holdid]", "Titel"\: "eksempel link", "mere"\: falsk, "nyTab"\: sandt}
+module.SkillColoring.desc=Bedre visualisering af evner
+module.SkillColoring.skill_color.desc=Farvelægger evner
+module.SkillColoring.only_skill_color.desc=Farvelægger kun evner og ikke personligheder, fan humør etc.
+module.SkillColoring.skill_number.desc=Vis evner også som nummer f.eks. God (7)
+module.SkillColoring.skill_number_translated.desc=Vis evner også oversat til engelsk og som nummer f.eks. God (Solid 7)
+module.SkillColoring.skill_select.desc=Vis også tal på transfer Søgning dvs. God (7)
+module.SkillColoring.no_skill_links.desc=Skjuler understregning og grøn skrifttype givet ved HT'er
+module.BackgroundFixed.desc=Statisk baggrundsbillede.
+module.MatchIncome.desc=Vis tilskuerindtægterne i kampreferatet
 #YouthSkillHideUnknown
+module.YouthSkillHideUnknown.desc=Skjul ukendt evner og/eller "Maksimum" ordet på ungdom spillere side
+module.YouthSkillHideUnknown.HideUnknown.desc=Skjul ukendte evner
+module.YouthSkillHideUnknown.HideMaximalKeyWord.desc=Skjule "Maksimum" ordet for at få mere plads
+module.SkillTable.desc=Vis spillere evner som en tabel.
+module.SkillTable.OtherTeams.desc=Aktivere for andre hold
+module.SkillTable.ColouredYouth.desc=Vis farvet ungdoms evner
 #HighlightCupwins
+module.HighlightCupwins.desc=Fremhæve vindende hold på cup kamp side
+module.HighlightCupwins.HighlightCupsets.desc=Fremhæve Cup sejre (kampe vundet af hold af lavere rang)
+module.SkillTranslation.desc=Tilføjer engelske oversættelser til evner på hjælp/betegnelser side
 #CountryList
-
+module.CountryList.desc=Ændringer af land navne
+module.CountryList.SelectBoxes.desc=Erstatter engelske landnavne af deres oprindelige navne i rullepanelet
+module.CountryList.TeamPage.desc=Viser en tekst med link til ligaen før region og serie på hold side
+module.CountryList.ManagerPage.desc=Viser en tekst med link til ligaen før sproget på manager siden
+module.CountryList.HideFlagOntop.desc=Fjerner linket til ligaen på hold side
+module.MatchTables.desc=Fjerner tomme hvide felter på kamp tabeller
+module.MatchTables.RemoveTime.desc=Fjerner kamptid på aktuel kamp tabel
+module.YouthPromotes.desc=Viser dage til at rykke en ungdom spiller op
+module.HTMSPrediction.desc=Tilføj resultatet forudsigelse på kamprapport side
+module.HighlightOwnerless.desc=Markér ejerløse hold på serie siden.
+module.LastLogin.desc=Viser tid siden sidste login på brugerens side
+module.TransferCompareSort.desc=Ved at klikke på overskriften, sorterer Transfer Sammenlign resultater ved TSI, pris eller form
+module.ForumStripHattrickLinks.desc=Afkorter interne links i forum fra serveren, for at gøre dem brugbare. Tilføjer også mellemrum for funktioner i / b / u i pre-tags (FormatPostingText modul)"
+module.ForumStripHattrickLinks.NoConfirmStripping.desc=Ingen bekræftelse før afkortning af links
+module.RapidId.desc=En bekvem indtastningsfeltet øverst på siden til at se holdet, spiller, osv. ved id
+module.YouthSeriesEstimation.desc=I søge tabellen, anslårs starttidspunktet for ungdoms ligaer, der er i sæson pausen.
+module.LocalTime.desc=Eventuelt vis tidspunkt i lokal tidszone i stedet for Hattrick tidszone
+module.ForumThreadAutoIgnore.desc=Ignorere forum emner automatisk med udvalgte tags (emner med [Tag] eller {Tag}).
+module.ForumThreadAutoIgnore.Tags.desc=Liste over tags, f.eks\: NT, idé, Fejl. Kommasepareret, store og små bogstaver.
+module.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=Godkend tråde ved deres id'er (delen før punktumet). Godkendte tråde bliver ikke ignoreret. Kommasepareret.
+module.TableSort.desc=Gør alle 'rigtige' tabeller som har en overskrift, mulig for sortering (herunder tabeller i forum indlæg)
+module.LiveAlert.desc=Vis en meddelelse for HT Live mål
+module.LiveAlert.Sound.desc=Afspil også lyd
+module.OldStyleFace.desc=Vis ansigter i gamle Hattrick stil
+module.NtPeek.desc=Titter NT/U20 kampe på land side og Min Hattrick
+module.SeriesFlags.desc=Vis liga flag ved siden af ​​bruger links
+module.SeriesFlags.Guestbook.desc=Vis i gæstebog
+module.SeriesFlags.Supporters.desc=Vis i supporter boks af et hold
+module.SeriesFlags.Visitors.desc=Vis i de seneste besøgende boks
+module.SeriesFlags.CountryOnly.desc=Vis landets flag, uden liga navn
+module.HTMSPoints.desc=Vis trænings pointene for en spiller beregnet med HTMS evne tabel
+module.HTMSPoints.AddToPlayer.desc=Vis på apillere side
+module.HTMSPoints.AddToSearchResult.desc=Vis på transfersøgnings resultatside
+module.HTMSPoints.AddToPlayerList.desc=Vis på spillere listeside
+module.TableOfStatisticalTruth.desc=Statistiske forudsigelse af det endelige liga stillinger (kun for afsluttet sæsoner).
+module.FriendlyInterface.desc=Justerer for at give mere brugervenlige brugerflade
+module.FriendlyInterface.FullPlayerNameInLineUp.desc=Vis Spillernavne uden ellipser i opstillings side
+module.FriendlyInterface.NtLinkForNtPlayer.desc=Vis  landsholde som links til landsholdspillere
+module.FriendlyInterface.HideAnswerTo.desc=Skjul svar til-links i gæstebog
+module.FriendlyInterface.HideSpeechlessSecretary.desc=Skjule Mit Kontor, hvis der ikke er noget nyt
+module.MyMonitor.desc=Overvåg de seneste kampe af venner og fjender på Min Hattrick
+module.MyMonitor.TeamIcons.desc=Vis hold logoer
+module.MarkAllAsRead.desc=En knap til at markere alle tråde i alle fora som læst
+module.ShowFriendlyBooked.desc=Vis om et hold har aftalt en venskabskamp på liga side
+module.ShowFriendlyBooked.OnDemand.desc=Vis venskabskampe kun on-demand
 # -----------------------------------------------------------------------------
 
 
@@ -417,6 +507,7 @@ Filters.specialty=Specialitet
 Filters.stars=Stjerner
 Filters.minimum=Mindst
 Filters.maximum=Maksimum
+
 
 match.type.league=Liga
 match.type.qualification=Kvalifikation
