--- a/content/locale/he/foxtrick.properties
+++ b/content/locale/he/foxtrick.properties
@@ -18,25 +18,46 @@ pluralFormRuleID=pluralFormRule1
 
 # Module descriptions
 # WARNING: your module description has to have the name module.MODULE_NAME.desc
+module.LineupShortcut.desc=הוסף קיצור להרכב בהיסטוריית המשחקים של השחקן
 module.LineupShortcut.HighlightPlayer.desc=הדגש שחקן הרכב בצבע צהוב בדף קביעת ההרכב באמצעות קיצור דרך, במקום ההדגשה של האטריק
 module.SmallerPages.desc=מקטין את הממדים של דפים מסוימים על מנת להתאימם למסכים קטנים
 module.SmallerPages.ReduceBid.desc=הזז את מיקום ההצעה לצד רמות היכולות והוצא את כל המחרוזות תוך השארת המספרים בלבד (כגון ההצעה הקיימת והזמן)
 module.ForumTemplates.desc=מאפשר להפוך הודעות בפורום לתבניות לשם שימוש נוסף בהמשך (ישים גם להודעות דואר, טיקטים וספרי אורחים, עורכים)
+module.ForumPreview.desc=מאפשר הצגת תצוגה מקדימה של הודעה , מודעות(חל גם על הודעות דואר, כרטיסים וספר אורחים)
+module.AddLeaveConfButton.desc=מוסיף כפתור 'פרוש מפורום' לכל ספריית פורום
 module.StarsCounter.desc=מוסיף את סך כל הכוכבים לדף ההרכב למשחק
 #AttVsDef
 module.AttVsDef.oldstyle.desc=עיצוב ישן
 module.AttVsDef.newstyle.desc=עיצוב חדש
 #Ratings
 module.Ratings.HideAverages.desc=הסתר דירוג ממוצע
+module.Ratings.HatStats.desc=רייטינג
+module.Ratings.HatStatsDetailed.desc=רייטינג מפורט
 module.Ratings.HatStatsSeparated.desc=רייטינג לפי כל חלק במגרש
+module.Ratings.LoddarStats.desc=רייטינג לודאר
 module.Ratings.PeasoStats.desc=סטטיסטיקות Peaso
 module.Ratings.VnukStats.desc=סטטיסטיקות Vnuk
 module.Ratings.GardierStats.desc=סטטיסטיקות Gardier
 #MedianTransferPrice
 module.FlagCollectionToMap.desc=מציג מפת עולם עם כל המדינות אשר את דגליהן אספת בכל קטגוריה
 #ForumYouthIcons
+module.ForumYouthIcons.q.desc=מוסיף סמל לתגיות ציטוט, אם חסר
 module.ForumYouthIcons.user_id.desc=מוסיף כפתור למספר משתמש
+module.ForumYouthIcons.kit_id.desc=מוסיף סמל למספר מדי הקבוצה
+module.ForumYouthIcons.line_br.desc=הוסף סמל למעבר שורה
+module.ForumYouthIcons.clock.desc=מוסיף סמל עבור הזמן הנוכחי
+module.ForumYouthIcons.spoiler.desc=מוסיף סמל עבור תגיות ספוילר
+module.ForumYouthIcons.youth_player.desc=מוסיף סמל עבור מספר שחקן נוער
+module.ForumYouthIcons.youth_team.desc=מוסיף סמל עבור מספר קבוצת נוער
+module.ForumYouthIcons.youth_match.desc=מוסיף סמל עבור מספר משחק נוער
+module.ForumYouthIcons.youth_series.desc=מוסיף סמל עבור מספר ליגת נוער
 module.ForumYouthIcons.enlarge_input.desc=הגדלת תיבת הטקסט לכתיבה נוחה יותר
+module.ForumYouthIcons.pre.desc=מוסיף סמל עבור תבנית פורום 'קדם'
+module.ForumYouthIcons.table.desc=מוסיף סמל עבור טבלה. תגית מותאמת אישית מקבלת ביטויים רגילים (מאסק עם תוספות, לדוגמה.)
+module.ForumYouthIcons.symbols.desc=מוסיף סמל לתווים למטה. הנתונים מופרדים בנקודה-פסיק. על מנת להשתמש בנקודה-פסיק יש לרשום "/;".
+module.ForumYouthIcons.debug.desc=מוסיף סמל עבור יומן איתור הבאגים של פוקסטריק
+module.ForumYouthIcons.settings.desc=מוסיף סמל להגדרות פוקסטריק
+module.ForumYouthIcons.tournament.desc=מוסיף סמל למספר טורניר
 module.ForumYouthIcons.tournament_match.desc=מוסיף כפתור למספר משחק בטורניר
 #FormatPostingText
 module.FormatPostingText.desc=מחליף תגיות HT-ML של פוקסטריק בתגיות HTML (כלומר, אלמנט 'קדם')
@@ -44,9 +65,12 @@ module.FormatPostingText.desc=מחליף תגיות HT-ML של פוקסטריק 
 module.EmbedMedia.desc=מזהה קישורים לקובצי מדיה ומטביע אותם באתר (בשלב הניסיון)
 module.EmbedMedia.EmbedYoutubeVideos.desc=הטבע סרטוני יוטיוב
 module.EmbedMedia.EmbedVimeoVideos.desc=הטבע קטעי וידאו של וימאו
+module.EmbedMedia.EmbedImageshack.desc=תמיכה מורחבת ב-ImageShack (למשתמשי פיירפוקס וכרום בלבד)
 #Forum direct page links
 #
 # please translate next lines again if needed
+module.ForumAlterHeaderLine.TruncateLeagueName.desc=מציג רק את רמת הליגה.
+module.OriginalFace.desc=הצג פנים מקוריות של שחקנים
 module.ConfirmActions.desc=בקש מהמשתמש לאשר לפני פעולות מסוימות (האם אתה בטוח\!?)
 module.ConfirmActions.Bid.desc=הצעת סכום כסף עבור שחקן
 module.ConfirmActions.TransferList.desc=הצבת שחקן ברשימת העברות
@@ -57,7 +81,7 @@ module.TeamStats.Speciality.desc=התמחות
 module.TeamStats.Personality.desc=אישיות
 module.TeamStats.Status.desc=מצב (כרטיסים/פציעות)
 module.TeamStats.Current_league.desc=ליגה נוכחית
-module.ExtraPlayerInfo.desc=הצג מידע נוסף של שחקנים בעמוד שחקנים.
+module.ExtraPlayerInfo.desc=הצג מידע נוסף של שחקנים בדף השחקנים.
 module.SeniorTeamShortCuts.desc=הוספת הקישורים לדף המאמן ולהרכב האחרון לתפריט "הקבוצה הבוגרת"
 module.SeniorTeamShortCuts.OnlyOtherPages.desc=הצג רק על דפים של קבוצות אחרות
 module.SeniorTeamShortCuts.AllPages.desc=הצג בכל הדפים
@@ -125,7 +149,6 @@ module.MatchSimulator.RatingsBelow.desc=מציג את התחזית למטה
 module.MatchSimulator.RatingsRight.desc=הצג תחזית בצד ימין
 module.RatingsDisplay.desc=מציג רייטינג ממוצע בסגנון שונה
 module.RatingsDisplay.DenominationsRange.desc=בדירוג מספרים בין 0 ל-20
-
 # -----------------------------------------------------------------------------
 
 
@@ -165,6 +188,10 @@ YouthPromotes.today=השחקן יכול להיות מקודם היום\!
 #teamstats+filters
 TeamStats.boxheader=סקירה קבוצתית
 TeamStats.General=כללי
+TeamStats.Attributes=תכונות
+TeamStats.Skills=יכולות
+TeamStats.Players=שחקנים
+TeamStats.Total=סה"כ
 TeamStats.PlayerNotToOld=שחקנים < גיל 19
 TeamStats.PlayerToOld=שחקנים \=> גיל 19
 TeamStats.Cards=כרטיסים
@@ -266,6 +293,8 @@ ForumSpecialBBCode.kit=הוסף מספר מדים
 ForumSpecialBBCode.article=הוסף מספר מאמר
 ForumSpecialBBCode.clock=הוספת שעה נוכחית
 ForumSpecialBBCode.spoiler=הוסף ספוילר
+ForumSpecialBBCode.pre=הוסף תגית סגנון 'קדם'
+ForumSpecialBBCode.table=הוסף תגיות סגנון 'טבלה' והמר   טקסט נבחר לטבלה (השורות יומרו לשורות בטבלה. טקסט שמופרד באמצעות "%s" יומר לתאים בטבלה)
 ForumSpecialBBCode.tableSeparator=המר "%s" לתאים
 ForumSpecialBBCode.enterSeparator=הזן מפריד מותאם אישית
 ForumSpecialBBCode.forumSymbol=הוספת "%s"
@@ -284,6 +313,7 @@ Filters.ok=קבל
 Filters.clear=נקה
 Filters.noFilter=ללא סינון
 Filters.none=ללא
+Filters.Attributes=מסנני תכונות
 Filters.days=ימים
 Filters.tsi=מדד כישורים
 Filters.stamina=כושר גופני
@@ -293,6 +323,11 @@ Filters.specialty=התמחות
 Filters.stars=כוכבים
 Filters.minimum=לכל הפחות
 Filters.maximum=מקסימום
+Filters.over=גדול
+Filters.under=קטן
+Filters.equal=שווה
+Filters.notEqual=לא שווה
+
 
 match.type.league=ליגה
 match.type.qualification=משחק מבחן
@@ -575,7 +610,10 @@ match.ratings.defence=הגנה
 match.ratings.total=סה"כ
 
 match.ratings.right=ימין
+match.ratings.center=מרכז
 match.ratings.left=שמאלית
+match.ratings.rightshort=י
+match.ratings.leftshort=ש
 
 ratings.HatStats=האטסטטס
 ratings.LoddarStats=לודאר
@@ -766,6 +804,7 @@ TeamPopupLinks.OpenNewTab=פתח בלשונית חדשה
 #toolbar
 toolbar.title=פוקסטריק
 toolbar.disableTemporary=הפוך ללא זמין באופן זמני
+toolbar.translationKeys=הצגת מקשי תרגום
 toolbar.preferences=העדפות
 status.active=פעיל
 status.enabled=מתאפשר אך לא מופעל ב-%s
@@ -775,7 +814,7 @@ status.disabled=לא זמין
 prefs.title=FoxTrick העדפות
 
 prefs.view.by.category=הצג לפי קטגוריות
-prefs.view.by.page=הצג לפי השתייכות לעמוד האחרון שביקרת
+prefs.view.by.page=הצג לפי הדף האחרון בו ביקרת
 
 module.screenshot=צילום מסך
 
