--- a/content/locale/it/foxtrick.properties
+++ b/content/locale/it/foxtrick.properties
@@ -89,12 +89,14 @@ module.EmbedMedia.EmbedYoutubeVideos.desc=Incorpora video di YouTube
 module.EmbedMedia.EmbedVimeoVideos.desc=Incorpora video di Vimeo
 module.EmbedMedia.EmbedFunnyOrDieVideos.desc=Incorpora video di FunnyOrDie
 module.EmbedMedia.EmbedDailymotionVideos.desc=Incorpora video di Dailymotion
+module.EmbedMedia.EmbedModeOEmebed.desc=Utilizzare oEmbed per incorporare media (solo Firefox e Chrome)
 module.EmbedMedia.ReplaceLinksByTitles.desc=Sostituisce il testo del collegamento con l'etichetta dell'elemento multimediale, ad esempio il nome dell'immagine
 module.EmbedMedia.EmbedSoundCloud.desc=Incorpora Soundcloud
 module.EmbedMedia.EmbedFlickrImages.desc=Incorpora immagini da Flickr
 module.EmbedMedia.EmbedDeviantArtImages.desc=Incorpora immagini da DeviantART
 module.EmbedMedia.EmbedGenericImages.desc=Incorpora immagini se il link è un link ad un'immagine
 module.EmbedMedia.EmbedGenericImagesClever.desc=Provate ricostruire l'indirizzo corretto dell'immagine, anche se il link originale inizialmente non sembra puntare ad un'immagine.
+module.EmbedMedia.EmbedImageshack.desc=Supporto esteso di ImageShack (solo Firefox e Chrome)
 #Forum direct page links
 module.DirectPageLinks.desc=Aggiunge un link che ti permette di passare a una certa pagina in un thread del Forum.
 #
@@ -274,6 +276,7 @@ module.LeagueNewsFilter.lineup_changes.desc=Mostra solo cambiamenti alla formazi
 #MoveManagerOnline
 module.MoveManagerOnline.desc=Sposta gli utenti online in alto nella pagina delle regioni. Attenzione\! Può essere molto lenta se i giocatori sono più di 100.
 module.TeamPopupLinks.desc=Visualizza un menu a tendina di scorciatoie quando passi sopra il collegamento ad una squadra
+module.TeamPopupLinks.TeamHighlight.desc=Evidenziare la squadra attuale nelle tabelle
 module.TeamPopupLinks.TeamLinks.desc=Visualizza il menu a tendina sui collegamenti alle squadre
 module.TeamPopupLinks.UserLinks.desc=Visualizza il menu a tendina sui collegamenti agli utenti
 module.TeamPopupLinks.Manager.desc=Utente (solo per collegamenti alle squadre)
@@ -375,19 +378,22 @@ module.MatchSimulator.desc=Aggiunge un simulatore della partita alla pagina per 
 module.MatchSimulator.RatingsOnTop.desc=Mette le valutazioni previste in alto
 module.MatchSimulator.RatingsBelow.desc=Visualizza la previsione qui sotto
 module.MatchSimulator.RatingsRight.desc=Visualizza previsione sulla destra
+module.MatchSimulator.HTMSPrediction.desc=Aggiungere la previsione di HTMS
 module.HeaderToggle.desc=Cliccando le intestazioni, si mostrano e nascondono le sezioni seguenti. Viene memorizzata l'ultima impostazione individuale in base all'intestazione e al tipo di pagina
 module.Filter.desc=Aggiungi i filtri in cima alle pagine dei giocatori
 module.RatingsDisplay.desc=Visualizza le valutazioni medie in uno stile diverso
 module.RatingsDisplay.DenominationsRange.desc=Denominazioni nell'intervallo 0-20
 module.RatingsDisplay.HatStats.desc=Come HatStats
+module.RatingsDisplay.HTSums.desc=Come somme di valutazioni di Hattrick
 module.SafeForWork.desc=Sostituisce l'icona e il testo del titolo delle schede di  Hattrick per sembrare meno sospetti. Assicurarsi di disattivare tutti gli altri moduli che potrebbero essere rischiosi, soprattutto i moduli "Alert".
-
+module.PlayerStatsExperience.desc=Consente di visualizzare i decimali dell'esperienza sulla pagina playerStats
 # -----------------------------------------------------------------------------
 
 
 # IN-GAME STRINGS. translate first
 
 #Series statistics
+rating.average=Valutazione media
 
 #Save for work
 SafeForWork.title=Titolo
@@ -421,6 +427,12 @@ YouthPromotes.today=Il giocatore può essere promosso oggi\!
 #teamstats+filters
 TeamStats.boxheader=Panoramica squadra
 TeamStats.General=Generale
+TeamStats.Attributes=Attributi
+TeamStats.Skills=Skills
+TeamStats.Players=Giocatori
+TeamStats.Total=Totale
+TeamStats.Selected=Selezionato
+TeamStats.Average=Media
 TeamStats.PlayerNotToOld=Giocatori < 19 anni
 TeamStats.PlayerToOld=Giocatori >\= 19 anni
 TeamStats.Cards=Cartellini
@@ -474,6 +486,7 @@ ExtraPlayerInfo.defensiveTrainer=Un allenatore %s con atteggiamento difensivo.
 ExtraPlayerInfo.offensiveTrainer=Un allenatore %s con atteggiamento spregiudicato.
 ExtraPlayerInfo.balancedTrainer=Un allenatore %s con atteggiamento equilibrato.
 ManagerButtons.writeInGuestbook=Scrivi nel libro degli ospiti
+LineupShortcut.lineup=Formazione
 ShowFriendlyBooked.ShowFriendlies=Mostra amichevoli
 
 #Transfer prices
@@ -545,6 +558,7 @@ Filters.ok=Ok
 Filters.clear=Pulisci
 Filters.noFilter=Nessun filtro
 Filters.none=Nessuno
+Filters.Attributes=Attributo filtri
 Filters.days=Giorni
 Filters.tsi=TSI
 Filters.stamina=Resistenza
@@ -554,6 +568,11 @@ Filters.specialty=Specialità
 Filters.stars=Stelle
 Filters.minimum=Almeno
 Filters.maximum=Massimo
+Filters.over=Sopra
+Filters.under=Sotto
+Filters.equal=È uguale a
+Filters.notEqual=Non è uguale a
+
 
 match.type.league=Serie
 match.type.qualification=Qualificazioni
@@ -575,8 +594,18 @@ matchOrder.swapPositions=Scambia le posizioni
 matchOrder.options=Opzioni
 matchOrder.staminaDiscount=Sconto resistenza
 matchOrder.staminaDiscount.title=Le valutazioni del settore sono scontate sulla base del contributo dei giocatori di tale settore
+matchOrder.attVsDef=Attacco contro la difesa
+matchOrder.attVsDef.title=Visualizzare le valutazioni  o come attacco-vs-difesa o come attacco-vs-attacco
 matchOrder.summary=Riepilogo
 matchOrder.tournamentMatch=Partita del torneo
+matchOrder.homeAway=Rilevamento automatico, aggiungere la squadra di casa o squadra in trasferta?
+matchOrder.homeAway.abbr=C/T
+matchOrder.default=Predefinito
+matchOrder.default.abbr=P
+matchOrder.home=Casa
+matchOrder.home.abbr=C
+matchOrder.away=Trasferta
+matchOrder.away.abbr=T
 
 #Skills
 Playmaking=Regia
@@ -1032,6 +1061,7 @@ exception.error=Errore %s
 
 log.header=Registro di FoxTrick
 # keep the following line untranslated
+log.env=Versione %1, %2 piattaforma, %3 locale, %4 layout, direzione %5
 
 ReadHtPrefs.HTLanguageChanged=Hai scelto nelle impostazioni di Foxtrick di cambiare la lingua di Foxtrick a ogni cambio di lingua sul sito. Ora la tua lingua è\: %s.
 
