--- a/content/locale/en/foxtrick.properties
+++ b/content/locale/en/foxtrick.properties
@@ -130,6 +130,7 @@ module.LinksAchievements.desc=Adds some external links to the achievements page
 module.LinksStaff.desc=Adds some external links to the staff page
 module.LinksTracker.desc=Adds some external tracker links to the corresponding NT pages and player pages
 module.LinksClubTransfers.desc=Adds some external links to the club transfer page
+module.LinksWorld.desc=Adds some external links to the world page
 module.LoyaltyDisplay.desc=Highlight the effect of loyalty and mother club bonus on your personal player page (Works only with 'Show skill bars' option enabled in HT preferences)
 module.ForumAlterHeaderLine.desc=Alters posting header line
 module.Singleline2.desc=Alternative ForumHeader single line module. Slightly faster than the other versions. Disables some conflicting forum post changing modules.
@@ -379,6 +380,7 @@ module.MatchSimulator.desc=Adds a match simulator to the match order interface.
 module.MatchSimulator.RatingsOnTop.desc=Keeps rating prediction on top
 module.MatchSimulator.RatingsBelow.desc=Displays prediction below
 module.MatchSimulator.RatingsRight.desc=Displays prediction on the right
+module.MatchSimulator.HTMSPrediction.desc=Add HTMS prediction
 module.HeaderToggle.desc=Clicking on h2-headers toggles showing and hiding of the following section. Remembers last setting individually based on page type and header title
 module.Filter.desc=Adds filters to top players page
 module.RatingsDisplay.desc=Displays average ratings in a different style
@@ -386,7 +388,7 @@ module.RatingsDisplay.DenominationsRange.desc=In the 0-20 denominations range
 module.RatingsDisplay.HatStats.desc=As HatStats
 module.RatingsDisplay.HTSums.desc=As Hattrick ratings sums
 module.SafeForWork.desc=Replaces icon and title text of Hattrick tabs
-
+module.PlayerStatsExperience.desc=Displays the experience subskill on the playerStats page
 # -----------------------------------------------------------------------------
 
 
@@ -426,6 +428,12 @@ YouthPromotes.future=Player can be promoted %1 day later, on %2.;Player can be p
 #teamstats+filters
 TeamStats.boxheader=Team overview
 TeamStats.General=General
+TeamStats.Attributes=Attributes
+TeamStats.Skills=Skills
+TeamStats.Players=Players
+TeamStats.Total=Total
+TeamStats.Selected=Selected
+TeamStats.Average=Average
 TeamStats.PlayerNotToOld=Players < 19 yr
 TeamStats.PlayerToOld=Players >\= 19 yr
 TeamStats.Cards=Cards
@@ -533,14 +541,30 @@ TransferSearchFilters.saveFilter=Save new filter
 Filters.label=Filters
 Filters.addFilterOptions=Add filter options
 Filters.ok=Ok
+Filters.Attributes=Attribute filters
 Filters.minimum=At least
 Filters.maximum=Maximum
+Filters.over=Over
+Filters.under=Under
+Filters.equal=Equal
+Filters.notEqual=Not equal
+
 
 
 matchOrder.swapPositions=Swap sides
 matchOrder.staminaDiscount=Stamina effect
 matchOrder.staminaDiscount.title=Sector ratings are affected according to the contributions of each player to each sector
-matchOrder.tournamentMatch=Tournament match
+matchOrder.attVsDef=Attack vs. defense
+matchOrder.attVsDef.title=Either display opponents ratings as attack-vs-defence or as attack-vs-attack
+matchOrder.tournamentMatch=Tournament
+matchOrder.homeAway=Auto-detect, add home team or away team?
+matchOrder.homeAway.abbr=H/A
+matchOrder.default=Default
+matchOrder.default.abbr=D
+matchOrder.home=Home
+matchOrder.home.abbr=H
+matchOrder.away=Away
+matchOrder.away.abbr=A
 
 #Skills
 
