--- a/content/locale/fr/foxtrick.properties
+++ b/content/locale/fr/foxtrick.properties
@@ -377,13 +377,15 @@ module.MatchSimulator.desc=Ajoute un simulateur à l'interface d'ordre de match
 module.MatchSimulator.RatingsOnTop.desc=Garder les notes de prévision au dessus
 module.MatchSimulator.RatingsBelow.desc=Prédiction ci-dessous
 module.MatchSimulator.RatingsRight.desc=Affiche les prédictions sur la droite
+module.MatchSimulator.HTMSPrediction.desc=Afficher la prédiction HTMS
 module.HeaderToggle.desc=Cliquer sur h2-headers permet de basculer entre montrer et cacher la section suivante. Il se souvient de la dernière configuration personnelle basé sur le type et l'en-tête de la page
 module.Filter.desc=Ajoute des filtres à la page des joueurs
 module.RatingsDisplay.desc=Affiche les notes dans différent style
 module.RatingsDisplay.DenominationsRange.desc=Dans l'ordre des caractéristiques de 0 à 20
 module.RatingsDisplay.HatStats.desc=Comme HatStats
+module.RatingsDisplay.HTSums.desc=Selon les notes de hattrick
 module.SafeForWork.desc=Remplace l'icône et le texte du titre des onglets Hattrick pour être moins suspect. Assurez-vous que vous avez désactivez également tous les autres modules qui pourraient vous démasquer, notamment les modules « Alertes ».
-
+module.PlayerStatsExperience.desc=Les points d'expérience acquis s'affichent sur la page des statistiques du joueur
 # -----------------------------------------------------------------------------
 
 
@@ -424,6 +426,12 @@ YouthPromotes.today=Le joueur peut être promu aujourd'hui \!
 #teamstats+filters
 TeamStats.boxheader=Synthèse de l'équipe
 TeamStats.General=Général
+TeamStats.Attributes=Attributs
+TeamStats.Skills=Caractéristiques
+TeamStats.Players=Joueurs
+TeamStats.Total=Total
+TeamStats.Selected=Sélectionné
+TeamStats.Average=Moyenne
 TeamStats.PlayerNotToOld=Joueurs < 19 ans
 TeamStats.PlayerToOld=Joueurs >\= 19 ans
 TeamStats.Cards=Cartons
@@ -549,6 +557,7 @@ Filters.ok=Ok
 Filters.clear=Effacer
 Filters.noFilter=Pas de filtre
 Filters.none=Aucun
+Filters.Attributes=Filtres d'attribut
 Filters.days=Jours
 Filters.tsi=TSI
 Filters.stamina=Endurance
@@ -558,6 +567,11 @@ Filters.specialty=Spécialité
 Filters.stars=Étoiles
 Filters.minimum=Au moins
 Filters.maximum=Maximum
+Filters.over=Supérieur à
+Filters.under=Inférieur à
+Filters.equal=Égal à
+Filters.notEqual=Pas égal à
+
 
 match.type.league=Ligue
 match.type.qualification=Qualification
@@ -579,8 +593,18 @@ matchOrder.swapPositions=Inversez les positions
 matchOrder.options=Options
 matchOrder.staminaDiscount=Effet de l'endurance
 matchOrder.staminaDiscount.title=Les notes de secteur dépendent des contributions de chaque joueur
+matchOrder.attVsDef=Attaque/Défense
+matchOrder.attVsDef.title=Comparer attaque/défense ou attaque/attaque
 matchOrder.summary=Résumé
 matchOrder.tournamentMatch=Match de tournoi
+matchOrder.homeAway=Détection automatique, équipe à domicile ou à l'extérieur ?
+matchOrder.homeAway.abbr=D/E
+matchOrder.default=Par défaut
+matchOrder.default.abbr=D
+matchOrder.home=Domicile
+matchOrder.home.abbr=D
+matchOrder.away=Extérieur
+matchOrder.away.abbr=E
 
 #Skills
 Playmaking=Construction
@@ -666,7 +690,7 @@ SkillTable.addHomegrown.title=Ajoute tous les joueurs issus du club de l'équipe
 SkillTable.showTimeInClub.title=Montre le temps restant d'ici à ce que le joueur puisse rejoindre l'équipe senior
 PlayerNumber=Numéro de maillot
 PlayerNumber.abbr=\#
-TSI=Total Skill Index
+TSI=Total Skill Index (TSI)
 TSI.abbr=TSI
 CanBePromotedIn=Peut être promu dans
 CanBePromotedIn.abbr=Prom
