Serbian release notes update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9246 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/release-notes.xml
+++ b/content/locale/sr/release-notes.xml
@@ -13,6 +13,22 @@
 <item>Уколико желите да вам Фокстрик не приказује обавештење о променама после сваког ажурирања искључите опцију "Прикажи поруку о променама после ажурирања Фокстрика" у табу <xhtml:a href="#tab=main">"Главне опције"</xhtml:a>.</item>
 </note>
 
+<note version="0.9.2">
+<item>● Мнпогобројна ажурирања превода. Хвала свим преводиоцима.</item>
+<item>● <module>TeamPopupLinks</module>: опција за означавање тренутног тима у табелама</item>
+<item>● <module>RatingsDisplay</module>: просечне оцене и звездице у табели статистке за лигу</item>
+<item>● SkillТable на страници резултата претраге трансфера: исправка грешке код повређених играча</item>
+<item>● <module>MatchReportFormat</module>: додате сиве иконице за негативне специјалне догађаје</item>
+<item>● Links: укључено на опција за додавање динамичких линкова</item>
+<item>● Links и staffmarker: учитавање у зипованом формату ради мањег оптерећења на сервер</item>
+<item>● Links: Поправка за брисање персонализованих линкова</item>
+<item>● <module>ForumAlterHeaderLine</module>: Поправљено означавање отварача теме и уклањање постИД за једноставно заглавље на Форуму</item>
+<item>● <module>ForumStripHattrickLinks</module>: поправљена опција за потврду</item>
+<item>● MatchSimulator: поправљено додавање мечева који нису са турнира</item>
+<item>● CopyYouth: уклоњена бескорина опција за копирање изворног кода играча</item>
+<item>● Још нека унапређења ради усклађивања са <xhtml:a href="https://addons.mozilla.org">AMO</xhtml:a> стандардима</item>
+</note>
+
 <note version="0.9.1">
 <item>● HTMS: поново узима у обзир и тактику</item>
 <item>● Tablesort: сортирање 'пливајућих' бројева</item>
