--- a/content/locale/sr/release-notes.xml
+++ b/content/locale/sr/release-notes.xml
@@ -14,10 +14,10 @@
 </note>
 
 <note version="0.9.2">
-<item>● Мнпогобројна ажурирања превода. Хвала свим преводиоцима.</item>
+<item>● Многобројна ажурирања превода. Хвала свим преводиоцима.</item>
 <item>● <module>TeamPopupLinks</module>: опција за означавање тренутног тима у табелама</item>
 <item>● <module>RatingsDisplay</module>: просечне оцене и звездице у табели статистке за лигу</item>
-<item>● SkillТable на страници резултата претраге трансфера: исправка грешке код повређених играча</item>
+<item>● <module>SkillТable</module> на страници резултата претраге трансфера: исправка грешке код повређених играча</item>
 <item>● <module>MatchReportFormat</module>: додате сиве иконице за негативне специјалне догађаје</item>
 <item>● Links: укључено на опција за додавање динамичких линкова</item>
 <item>● Links и staffmarker: учитавање у зипованом формату ради мањег оптерећења на сервер</item>
