*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9249 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/es-AR/foxtrick.properties
+++ b/content/locale/es-AR/foxtrick.properties
@@ -128,6 +128,7 @@ module.LinksAchievements.desc=Añadir algunos enlaces externos a la pàgina de l
 module.LinksStaff.desc=Añadir algunos enlaces externos a la pàgina del Staff
 module.LinksTracker.desc=Añadir algunos enlaces externos a las correspondientes bases de datos nacionales dentro detro de las páginas de jugadores y selecciones.
 module.LinksClubTransfers.desc=Añadir algunos enlaces externos a la página de Transferencias
+module.LinksWorld.desc=Agrega algunos enlaces a la página de mundo
 module.LoyaltyDisplay.desc=Resaltar el efecto de la lealtad y el bono por club madre en la página del jugador (Funciona sólo si 'Mostrar barras de habilidad' esta habilitada en las preferencias de HT)
 module.ForumAlterHeaderLine.desc=Altera el encabezado de los mensajes
 module.Singleline2.desc=Modulo con encabezado del foro alternativo de una línea. Un poco más rapido que las otras versiones. Deshabilita algunos mensajes del foro conflictivos.
@@ -377,6 +378,7 @@ module.MatchSimulator.desc=Agregar el simulador a la interfaz de orden de partid
 module.MatchSimulator.RatingsOnTop.desc=Mantiene la predicción de las calificaciones en la parte superior
 module.MatchSimulator.RatingsBelow.desc=Mostrar predicción a continuación
 module.MatchSimulator.RatingsRight.desc=Mostrar predicción a la derecha
+module.MatchSimulator.HTMSPrediction.desc=Añadir predicción HTMS
 module.HeaderToggle.desc=Haciendo clic en los encabezados-h2 alterna entre mostrar y ocultar de la sección siguiente. Recuerda el último ajuste individualmente según el título del encabezado y el tipo de página
 module.Filter.desc=Añadir filtros en la parte superior de la página de jugadores
 module.RatingsDisplay.desc=Muestra promedio de calificaciones en un estilo diferente
@@ -592,8 +594,18 @@ matchOrder.swapPositions=Cambio de lado
 matchOrder.options=Opciones
 matchOrder.staminaDiscount=Efecto de Condición
 matchOrder.staminaDiscount.title=Las calificaciones del sector son ajustadas según el aporte de cada jugador a ese sector
+matchOrder.attVsDef=Ataque contra defensa
+matchOrder.attVsDef.title=Mostrar calificaciones de los rivales como ataque-defensa o ataque-ataque
 matchOrder.summary=Resumen
 matchOrder.tournamentMatch=Partido de torneo
+matchOrder.homeAway=Autodetectar, agregar equipo local o visitante?
+matchOrder.homeAway.abbr=L/V
+matchOrder.default=Por defecto
+matchOrder.default.abbr=D
+matchOrder.home=Local
+matchOrder.home.abbr=L
+matchOrder.away=Visitante
+matchOrder.away.abbr=V
 
 #Skills
 Playmaking=Jugadas
