--- a/content/locale/fr/foxtrick.properties
+++ b/content/locale/fr/foxtrick.properties
@@ -128,6 +128,7 @@ module.LinksAchievements.desc=Ajoute des liens externes à la page Réussites.
 module.LinksStaff.desc=Ajoute des liens externes à la page Spécialistes.
 module.LinksTracker.desc=Ajoute des liens externes spécifiques aux pages des entraîneurs nationnaux (NT).
 module.LinksClubTransfers.desc=Ajoute des liens externes à la page Transferts
+module.LinksWorld.desc=Ajoute des liens externes à la page Monde
 module.LoyaltyDisplay.desc=Mettre en évidence l'effet du bonus de fidélité et du bonus du club sur vos pages de joueur (fonctionne uniquement si l'option « Montrer les barres de caractéristiques » est activée dans les préférences de HT)
 module.ForumAlterHeaderLine.desc=Modifier les entêtes des messages du forum.
 module.Singleline2.desc=Affiche les entêtes sur une seule ligne - Alternative 2. Légèrement plus rapide que les autres versions. Prévient certains conflits.
