--- a/content/locale/it/foxtrick.properties
+++ b/content/locale/it/foxtrick.properties
@@ -129,6 +129,7 @@ module.LinksAchievements.desc=Aggiunge collegamenti esterni alla pagina dei rico
 module.LinksStaff.desc=Aggiunge collegamenti esterni alla pagina dello staff
 module.LinksTracker.desc=Aggiunge un collegamento al DB della NT nella pagina delle NT e dei giocatori
 module.LinksClubTransfers.desc=Aggiunge collegamenti esterni alla pagina della storia trasferimenti
+module.LinksWorld.desc=Aggiunge alcuni link esterni alla pagina del mondo
 module.LoyaltyDisplay.desc=Evidenziare l'effetto della fedeltà e della provenienza dalle tue giovanili nella tua pagina personale del giocatore (Funziona solo con opzione 'Mostra le barre di abilità' attivato nelle preferenze di Hattrick)
 module.ForumAlterHeaderLine.desc=Modifica l'intestazione dei messaggi del forum
 module.Singleline2.desc=Mostra l'intestazione dei messaggi del forum su una sola riga. Leggermente più veloce delle altre versioni. Disabilita alcuni moduli per il forum che creano conflitti.
