--- a/content/locale/ko/release-notes.xml
+++ b/content/locale/ko/release-notes.xml
@@ -13,6 +13,22 @@
 <item>자세한 내용은 Google Code의 <xhtml:a href="http://code.google.com/p/foxtrick/source/list">보고 기록</xhtml:a>을 참조하세요.</item>
 </note>
 
+<note version="0.9.2">
+<item>● 또 하나의 거대한 언어 업데이트. 모든 번역가들에게 다시 한 번 감사드립니다</item>
+<item>● <module>TeamPopupLinks</module>: 테이블의 현재 팀을 선택적으로 강조합니다 (기본 활성화)</item>
+<item>● <module>RatingsDisplay</module>: 평균 별점과 레이팅을 시리즈 통계 테이블에 추가합니다</item>
+<item>● 이적 명단 검색을 위한 <module>SkillTable</module>: 부상 정보를 수정하였습니다</item>
+<item>● MatchReportFormat: 부정적인 SE 아이콘 추가하였습니다</item>
+<item>● Links: 추가된 동적 링크를 기본적으로 활성화합니다</item>
+<item>● Links and staffmarker: 대역폭 절약을 위해 불러오기를 압축하였습니다.</item>
+<item>● Links: 동작하지 않아 제거상태인 커스텀 링크 수정하였습니다</item>
+<item>● ForumAlterHeaderLine: 스레드 개설자 강조하고 간단한 머리글 수정을 위해 postid 제거하였습니다</item>
+<item>● ForumStripHattrickLinks: 확인 옵션을 수정하였습니다</item>
+<item>● MatchSimulator: 비 토너먼트 경기를 추가하는 것을 수정하였습니다</item>
+<item>● CopyYouth: 쓸모없는 선수 소스 복사를 제거하였습니다</item>
+<item>● AMO 규정을 위한 몇 가지 작업이 있었습니다</item>
+</note>
+
 <note version="0.9.1">
 <item>● HTMS: 전술을 다시 사용합니다</item>
 <item>● Tablesort: 실수 정렬</item>
