Russian translation update to r9257
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9258 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ru/foxtrick.properties
+++ b/content/locale/ru/foxtrick.properties
@@ -1,6 +1,6 @@
 #used by translators to keep track. not used with foxtrick atm
 properties.language=Russian
-properties.version=r9244
+properties.version=r9257
 properties.translators=_KOHb_ [teamId=28914]
 
 # Hints:
@@ -392,6 +392,13 @@ module.PlayerStatsExperience.desc=Показывать подуровень оп
 
 
 # IN-GAME STRINGS. translate first
+
+#PlayerStatsExperience
+PlayerStatsExperience.ExperienceText=Уже получил от %1 до %2 (из 28) очков опыта. Его опыт - между %3 и %4.
+PlayerStatsExperience.NotAllMatchesVisible=Действительное значение может быть выше, т.к. показываются не все матчи.
+PlayerStatsExperience.NoSkillUpFound=Действительное значение может быть выше, поскольку записей о повышении опыта не найдено.
+PlayerStatsExperience.ExperienceChange.title=Приобретённый опыт
+PlayerStatsExperience.ExperienceChange.title.abbr=Оп+
 
 #Series statistics
 rating.average=Средний рейтинг
