--- a/content/locale/ru/release-notes.xml
+++ b/content/locale/ru/release-notes.xml
@@ -15,8 +15,9 @@
 
 	<note version="0.9.2">
 		<item>● Очередное массовое обновление переводов. Снова всем спасибо за эти обновления.</item>
-		<item>● Модуль <module>TeamPopupLinks</module>: выделение текущей команды в таблицах (включено по умолчанию).</item>
-		<item>● Модуль <module>RatingsDisplay</module>: добавляет средние звёзды и рейтинги в таблицу статистики лиги.</item>
+		<item>● Новый модуль <module>PlayerStatsExperience</module>: показывает примерное увеличение опыта игрока за сыгранные матчи и показывает текущий подуровень (CatzHoek).</item>
+		<item>● Новый модуль <module>TeamPopupLinks</module>: выделение текущей команды в таблицах (включено по умолчанию).</item>
+		<item>● Новый модуль <module>RatingsDisplay</module>: добавляет средние звёзды и рейтинги в таблицу статистики лиги.</item>
 		<item>● Таблица навыков в поиске трансферов: исправлены травмы.</item>
 		<item>● Модуль <module>MatchReportFormat</module>: добавлены значки для негативных специальных событий.</item>
 		<item>● Ссылки: добавление динамических ссылок по умолчанию включено.</item>
