Serbian release notes update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9259 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/release-notes.xml
+++ b/content/locale/sr/release-notes.xml
@@ -15,6 +15,7 @@
 
 <note version="0.9.2">
 <item>● Многобројна ажурирања превода. Хвала свим преводиоцима.</item>
+<item>● НОВО: <module>PlayerStatsExperience</module>: на страници Историје наступа приказује колико искуства је играч добио у појединим мечевима и колики је његов тренутни подниво.(CatzHoek)</item>
 <item>● <module>TeamPopupLinks</module>: опција за означавање тренутног тима у табелама</item>
 <item>● <module>RatingsDisplay</module>: просечне оцене и звездице у табели статистке за лигу</item>
 <item>● <module>SkillТable</module> на страници резултата претраге трансфера: исправка грешке код повређених играча</item>
